# public-carcassonne-game-engine

./: .gitignore  .pre-commit-config.yaml  game_rules.md  match_simulator.py  mypy.ini  pyproject.toml  readme.md  ruff.toml  socring.md
.github/workflows/: README.md  discord-notification.yml  discord-webhook.yml
.internal_dev/: deisgn.md  style.md  update-lock.sh
example_submissions/: claude.py  complex.py  exampleSub.py  gpt.py  simple.py
game-engine/: game_engine.py
game-engine/state/: game_state.py
src/: match_simulator.py
src/engine/: __main__.py  game_engine.py  pyproject.toml  readme.md
src/engine/config/: expansion_config.py  game_config.py  io_config.py
src/engine/engine/: __main__.py  game_engine.py
src/engine/engine/game/: tile_subscriber.py
src/engine/engine/interface/io/: exceptions.py  game_result.py  input_validator.py
src/engine/engine/interface/logging/: event_inspector.py
src/engine/engine/state/: game_state.py  player_state.py  state_mutator.py
src/engine/game/: tile_subscriber.py  tile_watcher.py
src/engine/interface/io/: censor_event.py  input_validator.py  player_connection.py
src/engine/interface/logging/: event_factory.py  event_inspector.py
src/engine/state/: game_state.py  player_state.py  state_mutator.py
src/helper/: __main__.py  client_state.py  game.py  interface.py  pyproject.toml  readme.md  state_mutator.py
src/helper/helper/: client_state.py  game.py  interface.py  state_mutator.py  utils.py
src/lib/: __main__.py  pyproject.toml  readme.md
src/lib/config/: expansion.py  map_config.py  scoring.py
src/lib/game/: game_logic.py
src/lib/interact/: map.py  meeple.py  structure.py  tile.py
src/lib/interface/: readme.md
src/lib/interface/events/: base_event.py  event_game_ended.py  event_game_started.py  event_meeple_placed.py  event_player_bannned.py  event_player_drew_cards.py  event_player_met_point_limit.py  event_player_turn_started.py  event_player_won.py  event_river_phase_completed.py  event_structure_completed.py  event_tile_placed.py  game_started_event.py  typing.py
src/lib/interface/events/moves/: move_place_meeple.py  move_place_tile.py  typing.py
src/lib/interface/io/: ban_type.py
src/lib/interface/queries/: base_query.py  query_place_tile.py  typing.py
src/lib/lib/config/: scoring.py
src/lib/lib/game/: game_logic.py
src/lib/lib/interact/: map.py  meeple.py  structure.py  tile.py
src/lib/lib/interface/events/: event_player_meeple_freed.py  event_player_turn_started.py  event_player_won.py  event_tile_placed.py
src/lib/lib/interface/queries/: query_place_meeple.py
src/lib/models/: player_model.py  tile_model.py
src/python-helpers/: pylock.toml  requirements.txt
tests/: game_logic_test.py
(+2 files in other folders)
