[project]
name = "engine"
version = "0.0.1"
description = "Bot Battle 2025 Game Engine"
authors = [{ name = "Udit Samant" }]
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "dotmap>=1.3.30",
    "ipython>=9.4.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
]

[project.scripts]
engine = "engine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/engine", "src/lib", "src/shared"]
sources = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]
