[project]
name = "carcassonne"
version = "0.1.0"
description = "Bot Battle 2025 Game Engine"
authors = [
  { name = "Udit Samant" },
  { name = "Maurice Lam" }
]
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["src/lib", "src/engine", "src/helper"]

[tool.uv.sources]
lib = { path = "src/lib" }
engine = { path = "src/engine" }
helper = { path = "src/helper" }

[tool.uv]
dev-dependencies = ["lib", "engine", "helper", "mypy", "pre-commit"]
package = false
