[project]
name = "engine"
version = "0.1.0"
description = "Bot Battle 2025 Game Engine"
authors = [{ name = "Udit Samant" }, {name = "Maurice Lam" }, ]
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "dotmap>=1.3.30",
    "pydantic>=2.11.7",
]

[project.scripts]
engine = "engine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["engine"]
