[project]
name = "helper"
version = "0.1.0"
description = "Bot Battle 2025 Client Helper"
authors = [{ name = "Udit Samant" }]
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "dotmap>=1.3.30",
    "pydantic>=2.11.7",
]

[project.scripts]
helper = "helper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["helper"]
